added card of epoch

--- a/app/src/main/res/layout/activity_password_recovery.xml
+++ b/app/src/main/res/layout/activity_password_recovery.xml
@@ -14,7 +14,7 @@
         android:layout_margin="16dp"
         android:contentDescription="@string/go_back"
         android:background="@color/transparent"
-        android:src="@drawable/btn_back"
+        app:srcCompat="@drawable/btn_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -89,6 +89,12 @@
             android:layout_marginEnd="48dp"
             android:paddingVertical="12dp"
             />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/sign_bg"
+            android:contentDescription="@string/recovering"
+            android:scaleType="fitEnd"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
