--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -150,7 +150,12 @@
                     />
             </LinearLayout>
         </LinearLayout>
-
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/sign_bg"
+            android:contentDescription="@string/recovering"
+            android:scaleType="fitEnd"/>
 
     </LinearLayout>
 
