--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -7,11 +7,56 @@
     android:layout_height="match_parent"
     tools:context=".HistoryActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
+            <ImageButton
+                android:id="@+id/navDrawerBtn"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="8dp"
+                android:contentDescription="@string/navdrawer"
+                android:background="@color/transparent"
+                app:srcCompat="@drawable/btn_navdrawer_red"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:fontFamily="@font/russo_one"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="@string/historyHeader"
+            android:textColor="@color/mainHeader"
+            android:textSize="40sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/sepLine"
+            app:layout_constraintVertical_weight="1"
+            android:layout_marginTop="20dp"
+            />
+    <View
+        android:id="@+id/sepLine"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:layout_height="2dp"
+        android:background="@drawable/separator_line_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView"
+        app:layout_constraintVertical_weight="0.3"/>
 
-    </androidx.recyclerview.widget.RecyclerView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sepLine"
+        android:layout_marginVertical="16dp"
+        android:layout_marginHorizontal="8dp"
+        app:layout_constraintVertical_weight="9"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
