--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,4 +10,5 @@
     <color name="epochOnCard">#FFF0F0F0</color>
     <color name="forEye">#FFFFFBF6</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="gradientEnd">#3F0000</color>
 </resources>
