Added profile layout. PDF lib trouble

--- a/app/src/main/res/layout/activity_password_recovery.xml
+++ b/app/src/main/res/layout/activity_password_recovery.xml
@@ -93,8 +93,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/sign_bg"
-            android:contentDescription="@string/recovering"
-            android:scaleType="fitEnd"/>
+            android:contentDescription="@string/app_name"
+            android:scaleType="centerCrop"/>
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
