--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -147,7 +147,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/sign_bg"
-            android:contentDescription="@string/recovering"
-            android:scaleType="fitEnd"/>
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitXY"/>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
