--- a/app/src/main/res/layout/activity_celebrates.xml
+++ b/app/src/main/res/layout/activity_celebrates.xml
@@ -80,7 +80,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/sepLine"
-        app:layout_constraintBottom_toTopOf="@id/recyclerView"
+        app:layout_constraintBottom_toTopOf="@id/pdfView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_weight="3.2"
@@ -217,7 +217,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/pdfView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
