--- a/app/src/main/res/layout/activity_celebration.xml
+++ b/app/src/main/res/layout/activity_celebration.xml
@@ -91,7 +91,7 @@
         app:layout_constraintTop_toBottomOf="@id/textViewDate"
         app:layout_constraintBottom_toTopOf="@id/sepLine2"
         android:contentDescription="@string/celebrationNameExample"
-        android:src="@drawable/profilebg"
+        android:src="@drawable/profile_header"
         android:scaleType="centerCrop"
         android:layout_marginHorizontal="32dp"
         android:layout_marginVertical="16dp"
