--- a/app/src/main/res/layout/activity_learn_epoch.xml
+++ b/app/src/main/res/layout/activity_learn_epoch.xml
@@ -53,22 +53,20 @@
         app:layout_constraintTop_toBottomOf="@id/header"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/pdfView"
 
         app:layout_constraintVertical_weight="0.3"/>
 
-    <!--        app:layout_constraintBottom_toTopOf="@id/pdfView"-->
-
-<!--    <com.github.barteksc.pdfviewer.PDFView-->
-<!--        android:id="@+id/pdfView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/sepLine"-->
-<!--        android:layout_marginVertical="16dp"-->
-<!--        android:layout_marginHorizontal="8dp"-->
-<!--        app:layout_constraintVertical_weight="9"-->
-<!--        />-->
+    <com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/pdfView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sepLine"
+        android:layout_marginVertical="16dp"
+        android:layout_marginHorizontal="8dp"
+        app:layout_constraintVertical_weight="9"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
