--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -43,11 +43,11 @@
         app:layout_constraintTop_toBottomOf="@id/header"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/pdfView"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView"
         app:layout_constraintVertical_weight="0.3"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/pdfView"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
@@ -58,5 +58,6 @@
         android:layout_marginVertical="16dp"
         android:layout_marginHorizontal="8dp"
         app:layout_constraintVertical_weight="9"
+        tools:listitem="@layout/card_epoch"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
