--- a/app/src/main/res/layout/activity_password_recovery.xml
+++ b/app/src/main/res/layout/activity_password_recovery.xml
@@ -92,9 +92,10 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="120dp"
             android:src="@drawable/sign_bg"
             android:contentDescription="@string/app_name"
-            android:scaleType="centerCrop"/>
+            android:scaleType="fitXY"/>
 
 
     </LinearLayout>
