--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -46,6 +46,7 @@
             android:textSize="48sp"
             android:layout_marginTop="6dp" />
         <EditText
+            android:id="@+id/loginET"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:drawableStart="@drawable/ic_user"
@@ -65,6 +66,7 @@
             android:inputType="text" />
 
         <EditText
+            android:id="@+id/emailET"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:drawableStart="@drawable/ic_email"
@@ -81,58 +83,65 @@
             android:textColor="@color/epochOnCard"
             tools:ignore="RtlSymmetry"
             android:autofillHints="no"
-            android:inputType="text" />
+            android:inputType="textEmailAddress" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleDrawable="@drawable/ic_eye"
-            android:textColor="@color/epochOnCard"
-            android:textColorHint="@color/hints"
-            android:hint="@string/password"
             android:layout_marginHorizontal="48dp"
             android:layout_marginTop="16dp"
-            app:passwordToggleTint="@color/epochOnCard"
-            >
+            android:hint="@string/password"
+            android:textColorHint="@color/hints"
+            app:hintTextColor="@color/transparent"
+            app:passwordToggleDrawable="@drawable/ic_eye"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/epochOnCard">
+
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passwordET"
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:drawableStart="@drawable/ic_password"
                 android:background="@drawable/input_gradient"
-                android:textSize="20sp"
+                android:drawableStart="@drawable/ic_passwords"
                 android:fontFamily="@font/russo_one"
                 android:gravity="center"
+                android:hint=""
+                android:inputType="textPassword"
                 android:paddingEnd="46dp"
-                tools:ignore="RtlSymmetry"
-                android:inputType="textPassword"/>
+                android:textColor="@color/epochOnCard"
+                android:textSize="20sp"
+                tools:ignore="RtlSymmetry" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleDrawable="@drawable/ic_eye"
-            android:textColor="@color/epochOnCard"
-            android:textColorHint="@color/hints"
-            android:hint="@string/repeatPassword"
             android:layout_marginHorizontal="48dp"
             android:layout_marginTop="16dp"
-            app:passwordToggleTint="@color/epochOnCard"
-            >
+            android:hint="@string/repeatPassword"
+            android:textColorHint="@color/hints"
+            app:hintTextColor="@color/transparent"
+            app:passwordToggleDrawable="@drawable/ic_eye"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/epochOnCard">
+
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passwordET2"
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:drawableStart="@drawable/ic_password"
                 android:background="@drawable/input_gradient"
-                android:textSize="20sp"
+                android:drawableStart="@drawable/ic_passwords"
                 android:fontFamily="@font/russo_one"
                 android:gravity="center"
+                android:inputType="textPassword"
                 android:paddingEnd="46dp"
-                tools:ignore="RtlSymmetry"
-                android:inputType="textPassword"/>
+                android:textColor="@color/epochOnCard"
+                android:textSize="20sp"
+                tools:ignore="RtlSymmetry" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/registerBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/confirm"
@@ -144,11 +153,74 @@
             android:paddingVertical="12dp"
             />
         <ImageView
+            android:id="@+id/bottomIW"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/sign_bg"
             android:contentDescription="@string/app_name"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            android:layout_marginTop="10dp"
+            android:visibility="visible"/>
+        <TextView
+            android:id="@+id/passwordErrorTW"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/russo_one"
+            android:gravity="center"
+            android:text="@string/PasswordError"
+            android:textColor="@color/mainHeader"
+            android:textSize="24sp"
+            android:paddingHorizontal="12dp"
+            android:layout_marginTop="6dp"
+            android:visibility="gone"/>
+        <TextView
+            android:id="@+id/loginErrorTW"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/russo_one"
+            android:gravity="center"
+            android:text="@string/LoginError"
+            android:textColor="@color/mainHeader"
+            android:textSize="24sp"
+            android:paddingHorizontal="12dp"
+            android:layout_marginTop="6dp"
+            android:visibility="gone"/>
+        <TextView
+            android:id="@+id/passwordComparisonErrorTW"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/russo_one"
+            android:gravity="center"
+            android:text="@string/PasswordComparisonError"
+            android:textColor="@color/mainHeader"
+            android:textSize="24sp"
+            android:paddingHorizontal="12dp"
+            android:layout_marginTop="6dp"
+            android:visibility="gone"/>
+        <TextView
+            android:id="@+id/emptyFieldsErrorTW"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/russo_one"
+            android:gravity="center"
+            android:text="@string/EmptyFieldsError"
+            android:textColor="@color/mainHeader"
+            android:textSize="24sp"
+            android:layout_marginTop="6dp"
+            android:visibility="gone"
+            android:paddingHorizontal="12dp"/>
+        <TextView
+            android:id="@+id/emailFormatErrorTW"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/russo_one"
+            android:gravity="center"
+            android:text="@string/EmailFormatError"
+            android:textColor="@color/mainHeader"
+            android:textSize="24sp"
+            android:layout_marginTop="6dp"
+            android:visibility="gone"
+            android:paddingHorizontal="12dp"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
