--- a/app/src/main/res/menu/drawer_items.xml
+++ b/app/src/main/res/menu/drawer_items.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/profile"
-        android:title="@string/profile"
-        android:icon="@drawable/ic_profile"/>
-    <item
-        android:id="@+id/history"
-        android:title="@string/historyHeader"
-        android:icon="@drawable/ic_history"/>
-    <item
-        android:id="@+id/celebrates"
-        android:title="@string/celebratesHeader"
-        android:icon="@drawable/ic_profile"/>
+    <group
+        android:id="@+id/activities">
+        <item
+            android:id="@+id/profile"
+            android:title="@string/profile"
+            android:icon="@drawable/ic_profile"/>
+        <item
+            android:id="@+id/history"
+            android:title="@string/historyHeader"
+            android:icon="@drawable/ic_history"/>
+        <item
+            android:id="@+id/celebrates"
+            android:title="@string/celebratesHeader"
+            android:icon="@drawable/ic_celebration"/>
+    </group>
+<group
+    android:id="@+id/app">
     <item
         android:id="@+id/settings"
         android:title="@string/settings"
         android:icon="@drawable/ic_settings"/>
+
     <item
         android:id="@+id/aboutApp"
         android:title="@string/aboutUs"
@@ -24,9 +30,14 @@
         android:id="@+id/shareApp"
         android:title="@string/shareApp"
         android:icon="@drawable/ic_share"/>
-    <item
-        android:id="@+id/signOut"
-        android:title="@string/signOut"
-        android:icon="@drawable/ic_sign_out"/>
+</group>
+    <group
+        android:id="@+id/exit">
+        <item
+            android:id="@+id/signOut"
+            android:title="@string/signOut"
+            android:icon="@drawable/ic_sign_out"/>
+    </group>
+
 
 </menu>
