--- a/app/src/main/res/layout/activity_celebrates.xml
+++ b/app/src/main/res/layout/activity_celebrates.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CelebratesActivity">
-
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <ImageButton
         android:id="@+id/navDrawerBtn"
         android:layout_width="60dp"
@@ -68,22 +73,16 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@drawable/separator_line_horizontal"
-        app:layout_constraintVertical_weight="0.3"
         app:layout_constraintTop_toBottomOf="@id/textViewDate"
-        app:layout_constraintBottom_toTopOf="@id/filterLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
-
+</androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/filterLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/sepLine"
-        app:layout_constraintBottom_toTopOf="@id/pdfView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_weight="3"
+        android:layout_height="wrap_content"
         android:visibility="visible">
         <LinearLayout
             android:id="@+id/linearLayoutInputs"
@@ -156,7 +155,7 @@
         <LinearLayout
             android:id="@+id/LinearLayoutButtons"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -174,12 +173,7 @@
                 android:gravity="center"
                 android:text="@string/season"
                 android:textColor="@color/mainHeader"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toTopOf="@id/sepLine"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/header"
-                app:layout_constraintVertical_weight="0.5" />
+                android:textSize="24sp" />
 
             <Button
                 android:layout_width="match_parent"
@@ -237,7 +231,7 @@
         <View
             android:id="@+id/sepLineFilterCenter"
             android:layout_width="2dp"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:background="@drawable/separator_line_vertical"
             app:layout_constraintEnd_toStartOf="@id/LinearLayoutButtons"
             app:layout_constraintStart_toEndOf="@id/linearLayoutInputs"
@@ -260,7 +254,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pdfView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -268,8 +262,11 @@
         app:layout_constraintTop_toBottomOf="@id/filterLayout"
         android:layout_marginVertical="16dp"
         android:layout_marginHorizontal="8dp"
-        app:layout_constraintVertical_weight="6"
         tools:listitem="@layout/card_epoch"
-
         />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
+
+    <include
+        android:id="@+id/includedNavView"
+        layout="@layout/nav_drawer" />
+</androidx.drawerlayout.widget.DrawerLayout>
