--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -8,29 +8,6 @@
     android:layout_height="match_parent"
     tools:context=".HistoryActivity">
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:menu="@menu/drawer_items"
-        app:itemIconTint="@color/mainHeader"
-        android:theme="@style/ThemeOverlay.App.NavigationView"
-        app:headerLayout="@layout/drawer_header"
-        app:itemTextAppearance="@style/NavigationViewItemTextAppearance"
-        app:itemTextColor="@color/mainHeader"
-        android:fitsSystemWindows="true"
-        android:layout_gravity="start">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/russo_one"
-            android:gravity="bottom|center_horizontal"
-            android:text="@string/AppVersion"
-            android:textColor="@color/hints"
-            android:layout_marginBottom="4dp"
-            android:textSize="14sp"
-            />
-    </com.google.android.material.navigation.NavigationView>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -89,4 +66,9 @@
         tools:listitem="@layout/card_epoch"
         />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <include
+        android:id="@+id/includedNavView"
+        layout="@layout/nav_drawer"
+        />
 </androidx.drawerlayout.widget.DrawerLayout>
