--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -93,7 +93,7 @@
             android:hint="@string/password"
             android:textColorHint="@color/hints"
             app:hintTextColor="@color/transparent"
-            app:passwordToggleDrawable="@drawable/ic_eye"
+            app:passwordToggleDrawable="@drawable/password_toggle_selector"
             app:passwordToggleEnabled="true"
             app:passwordToggleTint="@color/epochOnCard">
 
@@ -121,7 +121,7 @@
             android:hint="@string/repeatPassword"
             android:textColorHint="@color/hints"
             app:hintTextColor="@color/transparent"
-            app:passwordToggleDrawable="@drawable/ic_eye"
+            app:passwordToggleDrawable="@drawable/password_toggle_selector"
             app:passwordToggleEnabled="true"
             app:passwordToggleTint="@color/epochOnCard">
 
