--- a/app/src/main/res/layout/card_epoch.xml
+++ b/app/src/main/res/layout/card_epoch.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="350dp"
-    android:layout_height="95dp">
+    android:layout_width="match_parent"
+    android:layout_height="95dp"
+    android:layout_marginVertical="10dp">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -10,19 +11,52 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="end"
-        android:layout_marginEnd="10dp"
+        android:layout_gravity="center"
+        android:gravity="bottom"
+        android:layout_marginEnd="75dp"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/epochNameTW"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/russo_one"
+            android:gravity="center"
+            android:layout_marginBottom="12dp"
+            android:text="Ивадзюку"
+            android:textColor="@color/epochOnCard"
+            android:textSize="24sp"
+            />
+        <TextView
+            android:id="@+id/epochPeriodTW"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/russo_one"
+            android:gravity="center"
+            android:text="\??? - 13 тыс. до Н.э."
+            android:textColor="@color/epochOnCard"
+            android:textSize="12sp"
+            android:layout_marginBottom="4dp"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:layout_marginEnd="30dp"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/testPercentageTW"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/russo_one"
             android:gravity="center"
             android:text="100%"
-            android:textColor="@color/white"
+            android:textColor="@color/epochOnCard"
+            android:layout_marginTop="4dp"
             android:textSize="24sp"
             />
         <Button
+            android:id="@+id/testBtn"
             android:layout_width="110dp"
             android:layout_height="30dp"
             android:text="@string/test"
@@ -33,6 +67,7 @@
             android:padding="2dp"
             />
         <Button
+            android:id="@+id/goBtn"
             android:layout_width="110dp"
             android:layout_height="30dp"
             android:text="@string/moreInfo"
