--- a/app/src/main/res/layout/activity_learn_epoch.xml
+++ b/app/src/main/res/layout/activity_learn_epoch.xml
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/drawerLayout"
+    android:layout_gravity="start"
+    android:background="@color/forEye"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LearnEpochActivity">
 
-    <ImageButton
-        android:id="@+id/navDrawerBtn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/navdrawer"
-        android:background="@color/transparent"
-        app:srcCompat="@drawable/btn_navdrawer_red"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageButton
+            android:id="@+id/navDrawerBtn"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:contentDescription="@string/navdrawer"
+            android:background="@color/transparent"
+            app:srcCompat="@drawable/btn_navdrawer_red"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     <ImageButton
         android:id="@+id/goBackBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
-        android:contentDescription="@string/navdrawer"
+        android:contentDescription="@string/go_back"
         android:background="@color/transparent"
         app:srcCompat="@drawable/btn_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
-        android:id="@+id/header"
+        android:id="@+id/epochTitleTW"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fontFamily="@font/russo_one"
@@ -50,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@drawable/separator_line_horizontal"
-        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintTop_toBottomOf="@id/epochTitleTW"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/pdfView"
@@ -65,8 +71,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sepLine"
-        android:layout_marginVertical="16dp"
-        android:layout_marginHorizontal="8dp"
         app:layout_constraintVertical_weight="9"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/includedNavView"
+        layout="@layout/nav_drawer"
+        />
+</androidx.drawerlayout.widget.DrawerLayout>
