--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="transparentBlack70">#70000000</color>
     <color name="gradientEnd">#3F0000</color>
+    <color name="optionGradientStart">#2F2F2F</color>
 </resources>
