--- a/app/src/main/res/layout/activity_celebration.xml
+++ b/app/src/main/res/layout/activity_celebration.xml
@@ -63,11 +63,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sepLine"
-        app:layout_constraintBottom_toTopOf="@id/textViewDate"
+        app:layout_constraintBottom_toTopOf="@id/currentDateTW"
         app:layout_constraintVertical_weight="0.7"
         />
     <TextView
-        android:id="@+id/textViewDate"
+        android:id="@+id/currentDateTW"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fontFamily="@font/russo_one"
@@ -88,7 +88,7 @@
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewDate"
+        app:layout_constraintTop_toBottomOf="@id/currentDateTW"
         app:layout_constraintBottom_toTopOf="@id/sepLine2"
         android:contentDescription="@string/celebrationNameExample"
         android:src="@drawable/profile_header"
